fix product details extra space issue

--- a/src/components/Product/ProductDetails.css
+++ b/src/components/Product/ProductDetails.css
@@ -238,6 +238,7 @@
   .product-details-left {
     width: 100%;
     padding: 0em 1em;
+    height: auto;
   }
   .product-details-title {
     width: 100%;
